# spec_generator

./: .gitignore  ENGINEERING_LOG.md  README.md  advice.md  cli.py  example_pspp_final.md  example_pspp_final.yaml  interpreter.py  pyproject.toml  real_test.yaml  requirements.txt
inputs/: hello.yaml
spss/: bmi_pipeline.yaml
src/exporters/: mermaid.py  yaml.py
src/importers/spss/: ast.py  grammar.py  graph_builder.py  lexer.py  parser.py  tokens.py
src/importers/spss/parsers/: base.py  logic.py  schema.py  stats.py
src/ir/: model.py  types.py
src/pipeline/: conductor.py
src/spec_generator/exporters/: mermaid.py  yaml.py
src/spec_generator/importers/spss/: ast.py  grammar.py  graph_builder.py  lexer.py  parser.py
src/spec_generator/importers/spss/parsers/: base.py  logic.py  schema.py  (+1 more)
tests/golden/: cases.yaml  conftest.py  test_01_load_sort_save.py  test_09_full_pipeline.py  test_runner.py
tests/integration/: test_advanced_scenarios.py  test_complex_pipeline.py  test_end_to_end.py  test_ghost_columns.py  test_lexer_robustness.py  test_logic_patterns.py  test_noise_filtering.py  test_pending_features.py  test_professor_simulation.py  test_schema_propagation.py  test_sort_flow.py  test_topology_bridge.py  test_topology_debug.py
tests/unit/: test_aggregate_parsing.py  test_data_block_parsing.py  test_datalist_parsing.py  test_graph_builder_semantics.py  test_ignorable_nodes.py  test_ir_validation.py  test_islands.py  test_join_parsing.py  test_parser_edge_cases.py  test_parser_sort.py  test_semantic_parsing.py  test_spss_lexer.py  test_spss_parser.py
