[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec_generator"
version = "0.1.0"
description = "SPSS Parser and Graph Builder for the Enterprise ETL Compiler"
dependencies = [
    "etl-ir-core",  # Depends on the core library
    "pydantic>=2.0"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools code is in src/